--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
         <artifactId>spring-data-commons</artifactId>
         <version>2.1.10.RELEASE</version>
       </dependency>
+      <plugin>
+  <groupId>org.apache.tomcat.maven</groupId>
+  <artifactId>tomcat7-maven-plugin</artifactId>
+  <version>2.2</version>
+</plugin>
     </dependencies>
 
     <build>
