--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
      <artifactId>javaee-api</artifactId>
      <version>8.0.1</version>
    </dependency>
+ 
+   <dependency>
+     <groupId>com.googlecode.json-simple</groupId>
+     <artifactId>json-simple</artifactId>
+     <version>1.1.1</version>
+   </dependency>
  </dependencies>
 
 	<build>
